# openCVexperiments

./: CMakeLists.txt  README.md  aloha.hpp  bgSub.cpp  blurCapture.cpp  conv.cpp  frameDifferencing.cpp  hog.cpp  hog.hpp  main.cpp  polar.cpp  polar.hpp  smask.cpp  vidcap.cpp  vidcap.hpp  wowfilter.cpp
